# rusty

app/: Cargo.toml  memory.x
app/.cargo/: config
app/src/: main.rs
microbit/: Cargo.toml  Embed.toml
microbit/src/: main.rs
