[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true

[dependencies]
cortex-m = "^0.6.0"
cortex-m-rt = "^0.6.0"
embedded-hal = "^0.2.7"
panic-halt = "^0.2.0"
stm32f3xx-hal-v2 = { version = "0.6.0", features = ["rt", "stm32f303x8"] }

